--- a/personalsite/main/templates/about.html
+++ b/personalsite/main/templates/about.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h1>About</h1>
-<p>Here is my about section</p>
+<p>Here is my about section - All about me!</p>
 {% endblock %}
