small website updates

--- a/personalsite/main/templates/projects.html
+++ b/personalsite/main/templates/projects.html
@@ -53,8 +53,8 @@
         <!-- Project Card 6 -->
         <div class="project-card">
             <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 6" class="project-img">
-            <h3>3D-Printed Robotic Hand with Tactile Sensing</h3>
-            <p>Built a pickleball trainer robot so I could stop losing to old ladies</p>
+            <h3>Printable Robotic Hand</h3>
+            <p>An easily manufacturable robotic hand with tactile sensing</p>
             <a href="#" class="btn-project">View Details</a>
         </div>
 
@@ -63,7 +63,7 @@
         <div class="project-card">
             <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 7" class="project-img">
             <h3>The Shock Sock</h3>
-            <p>Collaboration with the Pittsburgh Penguins to build an ankle protector that doesn't inhibit motion</p>
+            <p>Collaboration with the Pittsburgh Penguins to build an ankle protector for hockey players that doesn't restrict motion</p>
             <a href="#" class="btn-project">View Details</a>
         </div>
 
@@ -71,8 +71,8 @@
         <!-- ... up to Project Card 8 -->
         <div class="project-card">
             <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 8" class="project-img">
-            <h3>Internships</h3>
-            <p>Quick highlights of internships at SpaceX, FTS International, and Howmet Aerospace</p>
+            <h3>BCBETS.NET: Machine Learning for Sports Betting</h3>
+            <p>Created a website that displays live evaluations of current DraftKings NBA moneyline bets (original purpose of this domain)</p>
             <a href="#" class="btn-project">View Details</a>
         </div>
     </div>
