--- a/personalsite/main/templates/projects.html
+++ b/personalsite/main/templates/projects.html
@@ -11,7 +11,7 @@
     <div class="projects-grid">
         <!-- Project Card 1 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 1" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 1" class="project-img">
             <h3>FSAE Aerodynamics</h3>
             <p>Summary of my work as Aerodynamics & Composites Captain for Carnegie Mellon Racing's 2023 racecar, which finished first in the US</p>
             <a href="#" class="btn-project">View Details</a>
@@ -19,7 +19,7 @@
 
         <!-- Project Card 2 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 2" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 2" class="project-img">
             <h3>FSAE Uprights</h3>
             <p>My senior year, I moved to the Powertrain team on CMR and re-designed the team's uprights</p>
             <a href="#" class="btn-project">View Details</a>
@@ -27,7 +27,7 @@
         
         <!-- Project Card 3 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 3" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 3" class="project-img">
             <h3>Pickleball Robot</h3>
             <p>Built a pickleball robot to practice against so I could stop losing to old ladies</p>
             <a href="#" class="btn-project">View Details</a>
@@ -35,7 +35,7 @@
 
         <!-- Project Card 4 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 4" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 4" class="project-img">
             <h3>Magic Chess Board</h3>
             <p>A physical chess board that automatically detects and plays moves against you</p>
             <a href="#" class="btn-project">View Details</a>
@@ -43,7 +43,7 @@
 
         <!-- Project Card 5 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 5" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 5" class="project-img">
             <h3>Deployable Satellite Sunshade</h3>
             <p>A sunshade that deploys</p>
             <a href="#" class="btn-project">View Details</a>
@@ -52,7 +52,7 @@
 
         <!-- Project Card 6 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 6" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 6" class="project-img">
             <h3>Printable Robotic Hand</h3>
             <p>An easily manufacturable robotic hand with tactile sensing</p>
             <a href="#" class="btn-project">View Details</a>
@@ -61,7 +61,7 @@
 
         <!-- Project Card 7 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 7" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 7" class="project-img">
             <h3>The Shock Sock</h3>
             <p>Collaboration with the Pittsburgh Penguins to build an ankle protector for hockey players that doesn't restrict motion</p>
             <a href="#" class="btn-project">View Details</a>
@@ -70,7 +70,7 @@
 
         <!-- ... up to Project Card 8 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.jpg' %}" alt="Project 8" class="project-img">
+            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 8" class="project-img">
             <h3>BCBETS.NET: Machine Learning for Sports Betting</h3>
             <p>Created a website that displays live evaluations of current DraftKings NBA moneyline bets (original purpose of this domain)</p>
             <a href="#" class="btn-project">View Details</a>
