Updated site: uprights

--- a/personalsite/main/templates/aero.html
+++ b/personalsite/main/templates/aero.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Aerodynamics &amp; Composites Team Captain – Carnegie Mellon Racing</h1>
+    <h1>23e Aerodynamics &amp; Composites Team Captain<br>Carnegie Mellon Racing</h1>
 
     <!-- Introduction Section -->
     <section class="project-section">
