--- a/personalsite/main/templates/aero.html
+++ b/personalsite/main/templates/aero.html
@@ -12,11 +12,14 @@
     <section class="project-section">
         <p>
             I served as the Aerodynamics and Composites team captain for Carnegie Mellon Racing’s
-            2022–2023 electric race car, which finished second out of 69 teams at Formula SAE Michigan, 
-            first place amongst US teams.
-            Our six-person team was responsible for the design, analysis, manufacturing, and testing
+            2022–2023 electric race car.
+
+            CMR is a student organization that designs and builds an electric racecar from scratch every year, which we then compete
+            with at FSAE events in the summer.
+            This car finished second out of 69 teams at Formula SAE Michigan, first place amongst US teams.
+            My six-person sub-team was responsible for the design, analysis, manufacturing, and testing
             of all aerodynamic components. This is probably my the project I'm most proud of as it really took
-            a full year of intense effort under tight timelines.
+            a full year of intense effort under tight timelines, and had a pretty great payoff at the end :)
 
         </p>
     </section>
@@ -35,6 +38,11 @@
             optimizing for the lightest possible design. Analysis was done with hand calcs and then in Ansys FEA,
             including the use of topology optimization to make the lightest possible rib shape with AI.
 
+        </p>
+        <p>
+            At every stage in the design process, we utilized our team's lap simulation software to evaluate tradeoffs 
+            in key variables, mainly trading off changes in downforce, drag, and mass. By utilizing aerodynamic principles/intuition and
+            running geometric studies, we did our best to optimize a huge state space of variables to achieve the lowest possible lap time.
         </p>
         <div class="photo-grid photo-grid--2x4">
             <!-- 8 images for Design & Analysis -->
