--- a/personalsite/main/templates/projects.html
+++ b/personalsite/main/templates/projects.html
@@ -13,7 +13,7 @@
         <div class="project-card">
             <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 1" class="project-img">
             <h3>FSAE Aerodynamics</h3>
-            <p>Summary of my work as Aerodynamics & Composites Captain for Carnegie Mellon Racing's 2023 racecar, which finished first in the US</p>
+            <p>Aerodynamics & Composites Captain for Carnegie Mellon Racing's 2023 racecar, which finished first in the US</p>
             <a href="{% url 'aero' %}" class="btn-project">View Details</a>
         </div>
 
@@ -21,7 +21,7 @@
         <div class="project-card">
             <img src="{% static 'images/UprightOil.jpg' %}" alt="Project 2" class="project-img">
             <h3>FSAE Uprights</h3>
-            <p>My senior year, I moved to the Powertrain team on CMR and re-designed the team's uprights</p>
+            <p>Led re-design of uprights as part of a powertrain architecture change for CMR's 2024 racecar</p>
             <a href="{% url 'uprights' %}" class="btn-project">View Details</a>
         </div>
         
@@ -29,7 +29,7 @@
         <div class="project-card">
             <img src="{% static 'images/PickleBot.png' %}" alt="Project 3" class="project-img">
             <h3>Pickleball Robot</h3>
-            <p>Built a pickleball robot to practice against so I could stop losing to old ladies</p>
+            <p>Built a pickleball robot to train me so I could stop losing to old ladies</p>
             <a href="{% url 'pickleball' %}" class="btn-project">View Details</a>
         </div>
 
@@ -37,7 +37,7 @@
         <div class="project-card">
             <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 4" class="project-img">
             <h3>Magic Chess Board</h3>
-            <p>A physical chess board that automatically detects and plays moves against you</p>
+            <p>Have no friends? Bored of online chess? Use this physical chess board that autonomously plays against you!</p>
             <a href="{% url 'chess' %}" class="btn-project">View Details</a>
         </div>
 
@@ -52,9 +52,9 @@
 
         <!-- Project Card 6 -->
         <div class="project-card">
-            <img src="{% static 'images/racecartrophy.JPG' %}" alt="Project 6" class="project-img">
+            <img src="{% static 'images/Delta.png' %}" alt="Project 6" class="project-img">
             <h3>Printable Robotic Hand</h3>
-            <p>An easily manufacturable robotic hand with tactile sensing</p>
+            <p>An easily manufacturable robotic hand with tactile sensing at its fingertips</p>
             <a href="{% url 'deltahand' %}" class="btn-project">View Details</a>
         </div>
 
