--- a/personalsite/main/templates/aero.html
+++ b/personalsite/main/templates/aero.html
@@ -45,17 +45,43 @@
             running geometric studies, we did our best to optimize a huge state space of variables to achieve the lowest possible lap time.
         </p>
         <div class="photo-grid photo-grid--2x4">
-            <!-- 8 images for Design & Analysis -->
-            <img src="{% static 'images/Aero/AeroCAD.jpg' %}" alt="CAD">
-            <img src="{% static 'images/Aero/drs_gif.gif' %}" alt="DRS">
-            <img src="{% static 'images/Aero/AeroFEA.jpg' %}" alt="FEA">
-            <img src="{% static 'images/Aero/CFD.jpg' %}" alt="CFD">
-            <img src="{% static 'images/Aero/CorneringSim.jpg' %}" alt="Cornering Simulation">
-            <img src="{% static 'images/Aero/AirfoilCFD.jpg' %}" alt="2D CFD">
-            <img src="{% static 'images/Aero/Graph.png' %}" alt="Cl Graph">
-            <img src="{% static 'images/Aero/GapGraph.png' %}" alt="Drag Graph">
+            <figure>
+                <img src="{% static 'images/Aero/AeroCAD.jpg' %}" alt="CAD">
+                <figcaption>Aero Assembly</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/drs_gif.gif' %}" alt="DRS">
+                <figcaption>DRS</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/AeroFEA.jpg' %}" alt="FEA">
+                <figcaption>FEA</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/CFD.jpg' %}" alt="CFD">
+                <figcaption>Full Car CFD</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/CorneringSim.jpg' %}" alt="Cornering Simulation">
+                <figcaption>Cornering CFD Simulation</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/AirfoilCFD.jpg' %}" alt="2D CFD">
+                <figcaption>2D Airfoil CFD</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/Graph.png' %}" alt="Cl Graph">
+                <figcaption>Airfoil Selection Study</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/GapGraph.png' %}" alt="Drag Graph">
+                <figcaption>Element Spacing Study</figcaption>
+            </figure>
         </div>
+        
     </section>
+
+
 
     <!-- Manufacturing & Testing Section -->
     <section class="project-section">
@@ -72,14 +98,32 @@
             and helped quantify the aerodynamic gains of our package. 
         </p>
         <div class="photo-grid photo-grid--2x3">
-            <!-- 5 images for MFG & Testing -->
-            <img src="{% static 'images/Aero/Infusion.png' %}" alt="Infusion Setup">
-            <img src="{% static 'images/Aero/MFGBond.png' %}" alt="Bonding Process">
-            <img src="{% static 'images/Aero/FlowVis.png' %}" alt="Flow Visualization">
-            <img src="{% static 'images/Aero/DRSGIF.gif' %}" alt="DRS Testing">
-            <img src="{% static 'images/Aero/testdata.png' %}" alt="Testing Data Plot">
-            <img src="{% static 'images/Aero/WindTunnel.jpg' %}" alt="Wind Tunnel">
+            <figure>
+                <img src="{% static 'images/Aero/Infusion.png' %}" alt="Infusion Setup">
+                <figcaption>Carbon Fiber Resin Infusion</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/MFGBond.png' %}" alt="Bonding Process">
+                <figcaption>Rear Wing Bonding</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/FlowVis.png' %}" alt="Flow Visualization">
+                <figcaption>Rear Wing Flow Visualization with Strings</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/DRSGIF.gif' %}" alt="DRS Testing">
+                <figcaption>Automated DRS</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/testdata.png' %}" alt="Testing Data Plot">
+                <figcaption>Coast Down Test Data</figcaption>
+            </figure>
+            <figure>
+                <img src="{% static 'images/Aero/WindTunnel.jpg' %}" alt="Wind Tunnel">
+                <figcaption>Wind Tunnel Testing</figcaption>
+            </figure>
         </div>
+
     </section>
 
     <!-- Results & Impact Section -->
