--- a/personalsite/main/templates/projects.html
+++ b/personalsite/main/templates/projects.html
@@ -19,9 +19,9 @@
 
         <!-- Project Card 2 -->
         <div class="project-card">
-            <img src="{% static 'images/UprightOil.jpg' %}" alt="Project 2" class="project-img">
+            <img src="{% static 'images/UprightOilWide.jpg' %}" alt="Project 2" class="project-img">
             <h3>FSAE Uprights</h3>
-            <p>Led re-design of uprights as part of a powertrain architecture change for CMR's 2024 racecar</p>
+            <p>Led re-design of uprights as part of a full powertrain architecture re-design for CMR's 2024 racecar</p>
             <a href="{% url 'uprights' %}" class="btn-project">View Details</a>
         </div>
         
@@ -54,7 +54,7 @@
         <div class="project-card">
             <img src="{% static 'images/Delta.png' %}" alt="Project 6" class="project-img">
             <h3>Printable Robotic Hand</h3>
-            <p>An easily manufacturable robotic hand with tactile sensing at its fingertips</p>
+            <p>An inexpensive robotic hand design with tactile sensing</p>
             <a href="{% url 'deltahand' %}" class="btn-project">View Details</a>
         </div>
 
@@ -63,7 +63,7 @@
         <div class="project-card">
             <img src="{% static 'images/RTRPrototype.jpg' %}" alt="Project 7" class="project-img">
             <h3>The Shock Sock</h3>
-            <p>Collaboration with the Pittsburgh Penguins to build an ankle protector for hockey players that doesn't restrict motion</p>
+            <p>Ankle protector for hockey players that doesn't restrict motion</p>
             <a href="{% url 'RTR' %}" class="btn-project">View Details</a>
         </div>
 
@@ -72,7 +72,7 @@
         <div class="project-card">
             <img src="{% static 'images/DKLogo.png' %}" alt="Project 8" class="project-img">
             <h3>BCBETS.NET: Machine Learning for Sports Betting</h3>
-            <p>Created a website that displays live evaluations of current DraftKings NBA moneyline bets (original purpose of this domain)</p>
+            <p>Live evaluations of DraftKings moneyline bets using AI</p>
             <a href="{% url 'bcbets' %}" class="btn-project">View Details</a>
         </div>
     </div>
